--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Lanyon
-tagline:          'A Jekyll theme'
-description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            'C & C++ Brasil'
+tagline:          'O Grupo de usuários C & C++ do Brasil'
+description:      'Bem vindo(a) ao site e blog do Grupo de usuários C & C++ do Brasil'
 url:              http://ccppbrasil.github.io
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Francisco Lopes'
+  url:            https://twitter.com/pepper_chico
 
 paginate:         5
 paginate_path:    blog/page:num
