Atualizando tabela de palestra na página dos encontros e testando redirect.

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ kramdown:
 
 highlighter:         pygments
 
+gems:
+  - jekyll-redirect-from
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
